kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barista-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: barista
  template:
    metadata:
      labels:
        app: barista
    spec:
      containers:
        - name: barista-container
          image: sushmaagowdaa/barista:5
          ports:
            - containerPort: 80
          imagePullPolicy: Always

          resources:
          requests:
            cpu: "1m"
            memory: "3Mi"
          limits:
            cpu: "4m"
            memory: "10Mi"
